# ferrisgram

./: .gitignore  Cargo.toml  LICENSE  README.md  generate.bat  generate.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  clippy.yml  rust.yml
examples/: README.md  echobot.rs
generator/: Cargo.toml  README.md  common.rs  helpers.rs  main.rs  methods.rs  spec_types.rs  types.rs
src/: README.md  bot.rs  error.rs  helpers_ext.rs  input_file.rs  lib.rs  macros.rs
src/ext/: README.md  context.rs  dispatcher.rs  handler.rs  mod.rs  updater.rs
src/helpers/: animation.rs  audio.rs  bot_command.rs  bot_command_scope.rs  bot_command_scope_all_chat_administrators.rs  bot_command_scope_all_group_chats.rs  bot_command_scope_all_private_chats.rs  bot_command_scope_chat.rs  bot_command_scope_chat_administrators.rs  bot_command_scope_chat_member.rs  bot_command_scope_default.rs  bot_description.rs  bot_name.rs  bot_short_description.rs  callback_game.rs  callback_query.rs  chat.rs  chat_administrator_rights.rs  chat_boost.rs  chat_boost_added.rs  chat_boost_removed.rs  chat_boost_source_gift_code.rs  chat_boost_source_giveaway.rs  chat_boost_source_premium.rs  chat_boost_updated.rs  chat_invite_link.rs  chat_join_request.rs  chat_location.rs  chat_member.rs  chat_member_administrator.rs  chat_member_banned.rs  chat_member_left.rs  chat_member_member.rs  chat_member_owner.rs  chat_member_restricted.rs  chat_member_updated.rs  chat_permissions.rs  chat_photo.rs  chat_shared.rs  chosen_inline_result.rs  (+145 more)
src/methods/: README.md  add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  answer_web_app_query.rs  approve_chat_join_request.rs  ban_chat_member.rs  ban_chat_sender_chat.rs  close.rs  close_forum_topic.rs  close_general_forum_topic.rs  copy_message.rs  copy_messages.rs  create_chat_invite_link.rs  create_forum_topic.rs  create_invoice_link.rs  create_new_sticker_set.rs  decline_chat_join_request.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_forum_topic.rs  delete_message.rs  delete_messages.rs  delete_my_commands.rs  delete_sticker_from_set.rs  delete_sticker_set.rs  delete_webhook.rs  edit_chat_invite_link.rs  edit_forum_topic.rs  edit_general_forum_topic.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  forward_messages.rs  (+83 more)
src/types/: README.md  animation.rs  audio.rs  bot_command.rs  bot_command_scope.rs  bot_command_scope_all_chat_administrators.rs  bot_command_scope_all_group_chats.rs  bot_command_scope_all_private_chats.rs  bot_command_scope_chat.rs  bot_command_scope_chat_administrators.rs  bot_command_scope_chat_member.rs  bot_command_scope_default.rs  bot_description.rs  bot_name.rs  callback_game.rs  (+175 more)
(+14 files in other folders)
