[package]
name = "ferrisgram"
version = "0.1.8"
edition = "2021"
description = "An elegent rust client for the Telegram Bot API."
homepage = "https://github.com/ferrisgram"
repository = "https://github.com/ferrisgram/ferrisgram"
documentation = "https://docs.rs/ferrisgram"
readme = "README.md"
license = "MIT"
keywords = ["telegram", "bot-api", "bot"]
categories = ["api-bindings", "asynchronous"]
include = ["/src", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.50"
dyn-clone = "1.0.4"
mime_guess = "2.0.4"

actix-web={version="4.5.1",features=["openssl"]}
openssl="0.10.64"

hyper={version="1.1.0",features=["full"]}
http-body-util="0.1.0"
hyper-util={version="0.1.3",features=["full"]}
rustls = "0.23.0"
rustls-pemfile = "2.1.0"
tokio-rustls = "0.25.0"
